# actix_web_crud

./: Cargo.toml
src/: main.rs
src/handler/: admin_handler.rs  mod.rs  order_handler.rs  product_handler.rs  user_handler.rs
src/handler/admin/: admin_handler.rs
src/handler/user/: user_handler.rs
src/middleware/: admin_middleware.rs  mod.rs  user_middleware.rs
src/model/: message_model.rs  mod.rs  order_model.rs  product_model.rs  user_model.rs
