[package]
name = "rest_api_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] } 
serde_json ="1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono","uuid","json"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
chrono = {version="0.4", features=["serde"]}
uuid = { version = "1", features = ["v4", "serde"] }